# orange

./: .gitignore  Makefile  README.md
indexer/: .gitignore  Makefile  go.mod
indexer/cmd/orange/: main.go
indexer/cmd/pumpkin/: main.go
indexer/internal/index/: inverted.go  scorer.go
indexer/pkg/json/: lexer.go  parser.go
optimizer/: orange-optimizer.cabal
optimizer/app/: Main.hs
optimizer/src/: Ast.hs  Emit.hs  JsonLexer.hs  JsonParser.hs  Lib.hs  Simplify.hs
parser/: .gitignore  dune-project
parser/lib/: ast.ml  ast.mli  dune  lexer.ml  lexer.mli  parser.ml  parser.mli  token.ml  token.mli
tokenizer/: dune-project
tokenizer/lib/: dune  lexer.ml  pipeline.ml  pipeline.mli  stemmer.ml  stemmer.mli  stopwords.ml  stopwords.mli  tokenizer.ml  tokenizer.mli
