cabal-version: 3.0
name:          orange-optimizer
version:       0.1.0.0
license:       MIT
author:        Junzhe Wang
build-type:    Simple

-- Executable: the CLI tool
executable orange-optimizer
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    , base >=4.14 && <5
    , orange-optimizer
  default-language: Haskell2010

-- Library: reusable modules
library
  exposed-modules:
    Lib
    Ast
    JsonLexer
  hs-source-dirs:   src
  build-depends:
    , base >=4.14 && <5
  default-language: Haskell2010
